# wgpu_canvas

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  api.txt  camera.rs  file.rs
demo/: Cargo.toml
demo/src/: lib.rs  main.rs
src/: .lib.rs.swo  .text.rs.swo  canvas.rs  color.rs  cursor.rs  editor.rs  image.rs  lib.rs  renderer.rs  shape.rs  text.rs
src/color/: ellipse.wgsl  rectangle.wgsl  renderer.rs  rounded_rectangle.wgsl
src/image/: ellipse.wgsl  rectangle.wgsl  renderer.rs  rounded_rectangle.wgsl  shader.wgsl
src/renderer/: atlas.rs  buffer.rs  color.rs  image.rs  vertex.rs
src/renderer/color/: ellipse.wgsl  rectangle.wgsl  rounded_rectangle.wgsl
src/renderer/image/: ellipse.wgsl  rectangle.wgsl  rounded_rectangle.wgsl
