[package]
name = "wgpu_canvas"
version = "3.1.0"
edition = "2021"
description = "WGPU Renderer API for a 2D Canvas, Text, Color Shapes, Images"
license = "BSD-3-Clause"
repository = "https://github.com/CalebCouch/wgpu_canvas.git"


[dependencies]
wgpu = "25.0.0"
hex = "0.4.3"
wgpu_dyn_buffer = "3.0.0"
bytemuck = "1.21.0"
glyphon = "0.9.0"
image = {package="image", version="0.25.5"}
fast_image_resize = {version="5.1.2", features=["image"]}
unicode-segmentation = "1.12.0"
