[package]
name = "wgpu_canvas"
version = "4.0.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/wgpu_canvas.git"
description = "A 2D WGPU renderer API for drawing text, shapes, and images with Rust."
documentation = "https://docs.rs/wgpu_canvas"
readme = "README.md"
keywords = ["wgpu", "canvas", "2d", "graphics", "rust"]
categories = ["graphics", "rendering", "gui", "game-development"]

[dependencies]
wgpu = "25.0.0"
hex = "0.4.3"
wgpu_dyn_buffer = "3.0.0"
bytemuck = "1.21.0"
glyphon = "0.9.0"
image = {package="image", version="0.25.5"}
fast_image_resize = {version="5.1.2", features=["image"]}
unicode-segmentation = "1.12.0"
