[package]
name = "wgpu_canvas"
version = "5.0.1"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/wgpu_canvas.git"
description = "A 2D WGPU renderer API for drawing text, shapes, and images with Rust."
documentation = "https://docs.rs/wgpu_canvas"
readme = "README.md"
keywords = ["wgpu", "canvas", "2d", "graphics", "rust"]
categories = ["graphics", "rendering", "gui", "game-development"]

[dependencies]
wgpu = {version="25.0.0", optional=true}
bytemuck = {version="1.21.0", optional=true}
image = {package="image", version="0.25.5"}
fontdue = "0.9.3"

[features]
default = ["canvas", "renderer"]
canvas = ["renderer"]
renderer = ["dep:wgpu", "dep:bytemuck"]
